# DataScience

./: .gitignore  README.md  pyproject.toml
docs/: .gitkeep  báo cáo  CRISP.docx
notebooks/: .gitkeep  titannic_dataset.ipynb
sample_data/: .gitkeep
src/: __init__.py
