[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datascience"
version = "0.1.0"
description = "Repository for data science experiments and EDA notebooks"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.6",
  "scikit-learn>=1.2",
  "jupyterlab>=4.0"
]
